--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,53 +13,60 @@
 </head>
 <body>
 
-        <header>
-            <nav>
-                <div class="nav-wrapper text-shadow light-blue lighten-1">
-                    <a href="{{ url_for('get_tasks') }}" class="brand-logo">Task Manager</a>
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+	<header>
+        <!-- top navbar -->
+		<nav class="nav-extended text-shadow light-blue darken-1">
+			<div class="nav-wrapper">
+				<a href="{{ url_for('get_tasks') }}" class="brand-logo">Task Manager</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                    {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                         <li><a href="#">New Task</a></li>
                         <li><a href="#">Manage Categories</a></li>
-                        <li><a href="#">Log Out</a></li>
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
                         <li><a href="{{ url_for('login') }}">Log In</a></li>
                         <li><a href="{{ url_for('register') }}">Register</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <!--movile site nav-->
-            <ul class="sidenav" id="mobile-demo">
-                        <li><h4 class="center-align light-bluetext text-darken-4">Task Manager</h4></li>
-                        <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="#">New Task</a></li>
-                        <li><a href="#">Manage Categories</a></li>
-                        <li><a href="#">Log Out</a></li>
-                        <li><a href="{{ url_for('login') }}">Log In</a></li>
-                        <li><a href="{{ url_for('register') }}">Register</a></li>
-            </ul>
-        </header>
+                    {% endif %}
+				</ul>
+			</div>
+		</nav>
 
-        <section>
-            <!-- flash messages -->
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
+        <!-- mobile sidenav -->
+		<ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align light-blue-text text-darken 4">Task Manager</h4></li>
+            <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="#">New Task</a></li>
+                <li><a href="#">Manage Categories</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+		</ul>
+	</header>
+
+    <section>
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
                     <div class="row flashes">
                         <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
                     </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-        </section>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
 
-        <main class="container">
-            {% block content %}
-            {% endblock %}
-        </main>
-
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
